--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
 </head>
-<body>   
-  <form>
-    <table class="display-book">
-      <tr class="table-header">
-        <th>title</th>
-        <th>author</th>
-        <th>pages</th>
-        <th>Read</th>
-      </tr>
-    </table>
-  </form>
+<body> 
+  <button class="show-form-btn">NEW BOOK</button>
+  <div class="form-container">
+    <form>
+      <input type="text" name="book" placeholder="Book" id="book-input" required>
+      <input type="text" name="author" placeholder="Author" id="author-input" required>
+      <input type="number" name="pages" placeholder="Pages" id="pages-input" required >
+      <label for="read-status">did you read it?</label>
+      <input type="checkbox" name="read" id="read-status" >
+      <button class="add-book-btn">Submit</button>
+    </form>
+  </div> 
+  <table class="display-book">
+    <tr class="table-header">
+      <th>title</th>
+      <th>author</th>
+      <th>pages</th>
+      <th>Read</th>
+    </tr>
+  </table>
 </body>
 </html>
