--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
     <form>
       <input type="text" name="book" placeholder="Book" id="book-input" required>
       <input type="text" name="author" placeholder="Author" id="author-input" required>
-      <input type="number" name="pages" placeholder="Pages" id="pages-input" required >
+      <input type="number" name="pages" placeholder="Pages" id="pages-input" min="1" required >
       <label for="read-status">did you read it?</label>
       <input type="checkbox" name="read" id="read-status" >
       <button class="add-book-btn">Submit</button>
     </form>
   </div> 
-  <table class="display-book">
-    <tr class="table-header">
-      <th>title</th>
-      <th>author</th>
-      <th>pages</th>
-      <th>Read</th>
-    </tr>
+  <table>
+    <thead>
+      <tr class="table-header">
+        <th>Title</th>
+        <th>Author</th>
+        <th>Pages</th>
+        <th>Read</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody class="book-list">
+    </tbody>
   </table>
 </body>
 </html>
