Add a cancel button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <label for="read-status">did you read it?</label>
       <input type="checkbox" name="read" id="read-status" >
       <button class="add-book-btn">Submit</button>
+      <button class="cancel-form-btn">Cancel</button>
     </form>
   </div> 
   <table>
