--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,24 @@
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
 </head>
-<body> 
-  
+
+<body>
+
 
 
   <div class="form-container">
     <form>
-      <input type="text" name="book" placeholder="Book" id="book-input" required>
-      <input type="text" name="author" placeholder="Author" id="author-input" required>
-      <input type="number" name="pages" placeholder="Pages" id="pages-input" min="1" required >
+      <input type="text" name="book" placeholder="Book" minlength="1" maxlength="18" id="book-input" required>
+      <input type="text" name="author" placeholder="Author" minlength="1" maxlength="18" id="author-input" required>
+      <input type="number" name="pages" placeholder="Pages" id="pages-input" min="1" max="1000" required>
       <div class="checkbox-container">
         <label for="read-status">did you read it?</label>
-        <input type="checkbox" name="read" id="read-status" >
+        <input type="checkbox" name="read" id="read-status">
       </div>
       <button class="add-book-btn">Submit</button>
       <button class="cancel-form-btn">Cancel</button>
     </form>
-  </div> 
+  </div>
 
   <div class="grid">
     <div class="header">
@@ -48,4 +50,5 @@
     </table>
   </div>
 </body>
+
 </html>
